Fixing random stuff up and playing around
Converted NimblePublisher to be my own thing because i needed to modify
the using macro

--- a/site/index.html
+++ b/site/index.html
@@ -9,7 +9,9 @@
   <h1> Web</h1>
   <ul>
     <li>
-      <a href="posts/test"> my first </a>
+      <a href="posts/notes/test-02.html"> testing yet another </a>
+    </li><li>
+      <a href="posts/test.html"> my first </a>
     </li>
   </ul>
 
