Fix up topic cross-linking

--- a/site/systems/index.html
+++ b/site/systems/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="en-AU">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" href="/assets/app.css">
     <script type="text/javascript" src="/assets/app.js"></script>
   </head>
 
   <body>
   <h3>Foo</h3>
-    <%= render_slot(@inner_block)%>
+
+<h2> Systems </h2>
+
   </body>
 </html>
