--- a/site/index.html
+++ b/site/index.html
@@ -1,17 +1,33 @@
-<html>
-<head>
-<link rel="stylesheet" href="/assets/app.css">
-<script type="text/javascript" src="/assets/app.js"></script>
-</head>
+<!DOCTYPE html>
+<html lang="en-AU">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width">
+    <link rel="stylesheet" href="/assets/app.css">
+    <script type="text/javascript" src="/assets/app.js"></script>
+  </head>
 
   <body>
-    
-  <h1> Web</h1>
+  <h3>Foo</h3>
+
+  <h1>Zukini</h1>
+  <h3>A growing blog</h3>
+  <h3> Systems </h3>
   <ul>
     <li>
-      <a href="posts/notes/test-02.html"> testing yet another </a>
+      <a href="systems/zukini.html"> Zukini </a>
+    </li>
+  </ul>
+  <h3> Logs </h3>
+    <ul>
+    <li>
+      <a href="logs/2025-01-12-initial.html"> Starting a blog </a>
     </li><li>
-      <a href="posts/test.html"> my first </a>
+      <a href="logs/2025-01-20-birthday.html"> Shifting gears from startups to books </a>
+    </li><li>
+      <a href="logs/2025-01-21-helix.html"> Dot points on Helix editor while using it at work </a>
+    </li><li>
+      <a href="logs/2025-01-25-writing-system.html"> Building a writing system and writing a book </a>
     </li>
   </ul>
 
