--- a/site/index.html
+++ b/site/index.html
@@ -2,24 +2,41 @@
 <html lang="en-AU">
   <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width">
+    <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
+    <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport">
+
+    <!-- open graph -->
+    <meta property="og:title" content="Zukini blog">
+    <meta property="og:locale" content="en_AU">
+    <meta property="og:url" content="https://zukini.io">
+    <meta name="description" content="Discussing systems, methologies, progress and life choices of the author">
+    <link rel="icon" type="image/png" href="/assets/img/favicon.png">
+    <meta property="og:site_name" content="Zukini Systems">
+   
     <link rel="stylesheet" href="/assets/app.css">
     <script type="text/javascript" src="/assets/app.js"></script>
+    <title>Zukini</title>
+
+
+    <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/10.5.0/highlight.min.js"></script>
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/10.5.0/styles/atom-one-dark.min.css">
+
+    <script>
+      hljs.initHighlightingOnLoad();
+    </script>
+    <!--Alpine Js V3-->
+    <script src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js" defer></script>
   </head>
-
   <body>
-  <h3>Foo</h3>
+    <h1>Zukini</h1>
+    <main>
 
-  <h1>Zukini</h1>
-  <h3>A growing blog</h3>
-  <h3> Systems </h3>
+  <p>
+    A systems blog
+  </p>
+  <h1> Latest Logs and developments </h1>
   <ul>
-    <li>
-      <a href="systems/zukini.html"> Zukini </a>
-    </li>
-  </ul>
-  <h3> Logs </h3>
-    <ul>
     <li>
       <a href="logs/2025-01-12-initial.html"> Starting a blog </a>
     </li><li>
@@ -28,8 +45,24 @@
       <a href="logs/2025-01-21-helix.html"> Dot points on Helix editor while using it at work </a>
     </li><li>
       <a href="logs/2025-01-25-writing-system.html"> Building a writing system and writing a book </a>
+    </li><li>
+      <a href="logs/2025-01-30-games-and-capitalism.html"> 300 projects a month </a>
+    </li><li>
+      <a href="logs/2025-02-07-sorting-through-poverty.html"> Sorting through poverty </a>
     </li>
   </ul>
+  <p> or check out the <a href="/logs">log index</a>.</p>
+  <hr>
+  <h1> Current systems </h1>
+  <ul>
+    <li class="system-item">
+      <a href="systems/gap.html"> GAP - Grow and Protect (political philosophy) </a>
+    </li><li class="system-item">
+      <a href="systems/zukini.html"> Zukini </a>
+    </li>
+  </ul>
+  <p> or check out the <a href="/systems">systems index</a>.</p>
 
+    </main>
   </body>
 </html>
