fixing up site style

--- a/site/index.html
+++ b/site/index.html
@@ -10,7 +10,6 @@
     <meta property="og:locale" content="en_AU">
     <meta property="og:url" content="https://zukini.io">
     <meta name="description" content="Discussing systems, methologies, progress and life choices of the author">
-    <link rel="icon" type="image/png" href="/assets/img/favicon.png">
     <meta property="og:site_name" content="Zukini Systems">
    
     <link rel="stylesheet" href="/assets/app.css">
@@ -27,37 +26,40 @@
     </script>
     <!--Alpine Js V3-->
     <script src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js" defer></script>
+    <link rel="icon" type="image/png" href="/assets/img/favicon.png">
   </head>
-  <body>
-    <h1>Zukini</h1>
-    <main>
+  <body class>
+    <div class='pl-10 pb-4'>
+      <a href="/">
+        <img src="/assets/img/logo-long.png" class="w-1/6 mt-4" alt="logo">
+      </a>
+    </div>
+    <main class="container mx-auto pt-10">
 
-  <p>
-    A systems blog
-  </p>
-  <h1> Latest Logs and developments </h1>
+  <p class="text-2xl font-bold text-primary mb-2"> Latest Logs and developments </p>
   <ul>
     <li>
-      <a href="logs/2025-01-12-initial.html"> Starting a blog </a>
+      <a href="logs/2025-01-12-initial.html" class="hover:underline"> Starting a blog </a>
     </li><li>
-      <a href="logs/2025-01-20-birthday.html"> Shifting gears from startups to books </a>
+      <a href="logs/2025-01-20-birthday.html" class="hover:underline"> Shifting gears from startups to books </a>
     </li><li>
-      <a href="logs/2025-01-21-helix.html"> Dot points on Helix editor while using it at work </a>
+      <a href="logs/2025-01-21-helix.html" class="hover:underline"> Dot points on Helix editor while using it at work </a>
     </li><li>
-      <a href="logs/2025-01-25-writing-system.html"> Building a writing system and writing a book </a>
+      <a href="logs/2025-01-25-writing-system.html" class="hover:underline"> Building a writing system and writing a book </a>
     </li><li>
-      <a href="logs/2025-01-30-games-and-capitalism.html"> 300 projects a month </a>
+      <a href="logs/2025-01-30-games-and-capitalism.html" class="hover:underline"> 300 projects a month </a>
     </li><li>
-      <a href="logs/2025-02-07-sorting-through-poverty.html"> Sorting through poverty </a>
+      <a href="logs/2025-02-07-sorting-through-poverty.html" class="hover:underline"> Sorting through poverty </a>
     </li>
   </ul>
   <p> or check out the <a href="/logs">log index</a>.</p>
-  <hr>
-  <h1> Current systems </h1>
+
+  
+  <p class="text-2xl font-bold text-primary mb-2 mt-10"> Current systems </p>
   <ul>
-    <li class="system-item">
+    <li class="hover:underline">
       <a href="systems/gap.html"> GAP - Grow and Protect (political philosophy) </a>
-    </li><li class="system-item">
+    </li><li class="hover:underline">
       <a href="systems/zukini.html"> Zukini </a>
     </li>
   </ul>
