--- a/site/systems/zukini.html
+++ b/site/systems/zukini.html
@@ -10,7 +10,6 @@
     <meta property="og:locale" content="en_AU">
     <meta property="og:url" content="https://zukini.io">
     <meta name="description" content="Discussing systems, methologies, progress and life choices of the author">
-    <link rel="icon" type="image/png" href="/assets/img/favicon.png">
     <meta property="og:site_name" content="Zukini Systems">
    
     <link rel="stylesheet" href="/assets/app.css">
@@ -27,12 +26,18 @@
     </script>
     <!--Alpine Js V3-->
     <script src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js" defer></script>
+    <link rel="icon" type="image/png" href="/assets/img/favicon.png">
   </head>
-  <body>
-    <h1>Zukini</h1>
-    <main>
+  <body class>
+    <div class='pl-10 pb-4'>
+      <a href="/">
+        <img src="/assets/img/logo-long.png" class="w-1/6 mt-4" alt="logo">
+      </a>
+    </div>
+    <main class="container mx-auto pt-10">
 
-<h2> A post </h2>
+<div class="sm:flex w-full">
+  <div class="post sm:w-4/5 mb-10">
 <p>
 It’s fitting that one of the first systems I put on this site is the system itself.</p>
 <p>
@@ -58,19 +63,24 @@ Differences</h1>
 <p>
 Thoughts and opinions get a <code class="inline">last_updated</code> field, instead of </p>
 
-<ul>
-  <li>
-    <a href="/topics/blog.html"> blog </a>
-  </li><li>
-    <a href="/topics/systems.html"> systems </a>
-  </li><li>
-    <a href="/topics/writing.html"> writing </a>
-  </li><li>
-    <a href="/topics/learning.html"> learning </a>
-  </li><li>
-    <a href="/topics/elixir.html"> elixir </a>
-  </li>
-</ul>
+  </div>
+  <div class="topics sm:w-1/5 ml-10 border-lg">
+    <p class="text-md font-bold mb-5">Related topics</p>
+    <ul>
+      <li class="sm:text-right">
+        <a href="/topics/blog.html"> blog </a>
+      </li><li class="sm:text-right">
+        <a href="/topics/systems.html"> systems </a>
+      </li><li class="sm:text-right">
+        <a href="/topics/writing.html"> writing </a>
+      </li><li class="sm:text-right">
+        <a href="/topics/learning.html"> learning </a>
+      </li><li class="sm:text-right">
+        <a href="/topics/elixir.html"> elixir </a>
+      </li>
+    </ul>
+  </div>
+</div>
 
     </main>
   </body>
