--- a/site/index.html
+++ b/site/index.html
@@ -39,31 +39,43 @@
   <p class="text-2xl font-bold text-primary mb-2"> Latest Logs and developments </p>
   <ul>
     <li>
-      <a href="logs/2025-01-12-initial.html" class="hover:underline"> Starting a blog </a>
+      <a href="logs/2025-02-28-finding-a-system.html" class="hover:underline ml-5">
+2025-02-28,Finding a system
+      <em>  </em>
+      </a>
     </li><li>
-      <a href="logs/2025-01-20-birthday.html" class="hover:underline"> Shifting gears from startups to books </a>
+      <a href="logs/2025-02-07-sorting-through-poverty.html" class="hover:underline ml-5">
+2025-02-07,Sorting through poverty
+      <em> Finding something </em>
+      </a>
     </li><li>
-      <a href="logs/2025-01-21-helix.html" class="hover:underline"> Dot points on Helix editor while using it at work </a>
+      <a href="logs/2025-01-30-games-and-capitalism.html" class="hover:underline ml-5">
+2025-01-30,300 projects a month
+      <em>  </em>
+      </a>
     </li><li>
-      <a href="logs/2025-01-25-writing-system.html" class="hover:underline"> Building a writing system and writing a book </a>
+      <a href="logs/2025-01-25-writing-system.html" class="hover:underline ml-5">
+2025-01-25,Building a writing system and writing a book
+      <em>  </em>
+      </a>
     </li><li>
-      <a href="logs/2025-01-30-games-and-capitalism.html" class="hover:underline"> 300 projects a month </a>
-    </li><li>
-      <a href="logs/2025-02-07-sorting-through-poverty.html" class="hover:underline"> Sorting through poverty </a>
+      <a href="logs/2025-01-21-helix.html" class="hover:underline ml-5">
+2025-01-21,Dot points on Helix editor while using it at work
+      <em>  </em>
+      </a>
     </li>
   </ul>
-  <p> or check out the <a href="/logs">log index</a>.</p>
-
+  <p class="pt-5"> or check out the <a href="/logs">log index</a>.</p>
   
-  <p class="text-2xl font-bold text-primary mb-2 mt-10"> Current systems </p>
+  <p class="text-2xl font-bold text-primary mb-2 mt-10"> Current systems &amp; methodologies </p>
   <ul>
-    <li class="hover:underline">
-      <a href="systems/gap.html"> GAP - Grow and Protect (political philosophy) </a>
-    </li><li class="hover:underline">
+    <li class="hover:underline ml-5">
       <a href="systems/zukini.html"> Zukini </a>
+    </li><li class="hover:underline ml-5">
+      <a href="systems/gap.html"> GAP - Grow and Protect (political philosophy) </a>
     </li>
   </ul>
-  <p> or check out the <a href="/systems">systems index</a>.</p>
+  <p class="pt-5"> or check out the <a href="/systems">systems index</a>.</p>
 
     </main>
   </body>
