--- a/site/topics/blog.html
+++ b/site/topics/blog.html
@@ -54,6 +54,8 @@
   <ul>
     <li>
       <a href="/logs/2025-01-12-initial.html"> Starting a blog </a>
+    </li><li>
+      <a href="/logs/2025-02-28-finding-a-system.html"> Finding a system </a>
     </li>
   </ul>
 </div>
