--- a/site/topics/change.html
+++ b/site/topics/change.html
@@ -47,6 +47,8 @@
   <ul>
     <li>
       <a href="/logs/2025-01-20-birthday.html"> Shifting gears from startups to books </a>
+    </li><li>
+      <a href="/logs/2025-02-28-finding-a-system.html"> Finding a system </a>
     </li>
   </ul>
 </div>
