--- a/site/topics/habits.html
+++ b/site/topics/habits.html
@@ -46,9 +46,11 @@
   <h2> Related log posts </h2>
   <ul>
     <li>
+      <a href="/logs/2025-01-20-birthday.html"> Shifting gears from startups to books </a>
+    </li><li>
       <a href="/logs/2025-01-25-writing-system.html"> Building a writing system and writing a book </a>
     </li><li>
-      <a href="/logs/2025-01-20-birthday.html"> Shifting gears from startups to books </a>
+      <a href="/logs/2025-02-28-finding-a-system.html"> Finding a system </a>
     </li>
   </ul>
 </div>
