--- a/site/topics/technology.html
+++ b/site/topics/technology.html
@@ -36,14 +36,21 @@
     </div>
     <main class="container mx-auto pt-10">
 
-<h2> Systems </h2>
-<ul>
-  <li>
-    <a href="/systems/zukini.html"> Zukini </a>
-  </li><li>
-    <a href="/systems/gap.html"> GAP - Grow and Protect (political philosophy) </a>
-  </li>
-</ul>
+<h2> technology </h2>
+
+
+
+
+
+<div>
+  <h2> Related log posts </h2>
+  <ul>
+    <li>
+      <a href="/logs/2025-02-28-finding-a-system.html"> Finding a system </a>
+    </li>
+  </ul>
+</div>
+
 
     </main>
   </body>
