--- a/site/topics/systems.html
+++ b/site/topics/systems.html
@@ -53,9 +53,11 @@
   <h2> Related log posts </h2>
   <ul>
     <li>
+      <a href="/logs/2025-01-12-initial.html"> Starting a blog </a>
+    </li><li>
       <a href="/logs/2025-01-25-writing-system.html"> Building a writing system and writing a book </a>
     </li><li>
-      <a href="/logs/2025-01-12-initial.html"> Starting a blog </a>
+      <a href="/logs/2025-02-28-finding-a-system.html"> Finding a system </a>
     </li>
   </ul>
 </div>
