Added new post on prosocial games

--- a/site/index.html
+++ b/site/index.html
@@ -39,6 +39,11 @@
   <p class="text-2xl font-bold text-primary mb-2"> Latest Logs and developments </p>
   <ul>
     <li>
+      <a href="logs/2025-03-03-gamedev-and-prosocial-games.html" class="hover:underline ml-5">
+2025-03-03,Gamedev and Prosocial Games
+      <em> Interesting reports found from project horseshoe, and a dabbling interest. </em>
+      </a>
+    </li><li>
       <a href="logs/2025-02-28-finding-a-system.html" class="hover:underline ml-5">
 2025-02-28,Finding a system
       <em>  </em>
@@ -56,11 +61,6 @@
     </li><li>
       <a href="logs/2025-01-25-writing-system.html" class="hover:underline ml-5">
 2025-01-25,Building a writing system and writing a book
-      <em>  </em>
-      </a>
-    </li><li>
-      <a href="logs/2025-01-21-helix.html" class="hover:underline ml-5">
-2025-01-21,Dot points on Helix editor while using it at work
       <em>  </em>
       </a>
     </li>
