--- a/site/topics/poverty.html
+++ b/site/topics/poverty.html
@@ -47,6 +47,8 @@
   <ul>
     <li>
       <a href="/logs/2025-02-07-sorting-through-poverty.html"> Sorting through poverty </a>
+    </li><li>
+      <a href="/logs/2025-03-03-gamedev-and-prosocial-games.html"> Gamedev and Prosocial Games </a>
     </li>
   </ul>
 </div>
