--- a/site/topics/game-dev.html
+++ b/site/topics/game-dev.html
@@ -36,42 +36,21 @@
     </div>
     <main class="container mx-auto pt-10">
 
-<h2>Logbook</h2>
-<ul>
-  <li>
-    <a href="/logs/2025-03-03-gamedev-and-prosocial-games.html">
-2025-03-03 Gamedev and Prosocial Games
-    </a>
-  </li><li>
-    <a href="/logs/2025-02-28-finding-a-system.html">
-2025-02-28 Finding a system
-    </a>
-  </li><li>
-    <a href="/logs/2025-02-07-sorting-through-poverty.html">
-2025-02-07 Sorting through poverty
-    </a>
-  </li><li>
-    <a href="/logs/2025-01-30-games-and-capitalism.html">
-2025-01-30 300 projects a month
-    </a>
-  </li><li>
-    <a href="/logs/2025-01-25-writing-system.html">
-2025-01-25 Building a writing system and writing a book
-    </a>
-  </li><li>
-    <a href="/logs/2025-01-21-helix.html">
-2025-01-21 Dot points on Helix editor while using it at work
-    </a>
-  </li><li>
-    <a href="/logs/2025-01-20-birthday.html">
-2025-01-20 Shifting gears from startups to books
-    </a>
-  </li><li>
-    <a href="/logs/2025-01-12-initial.html">
-2025-01-12 Starting a blog
-    </a>
-  </li>
-</ul>
+<h2> game-dev </h2>
+
+
+
+
+
+<div>
+  <h2> Related log posts </h2>
+  <ul>
+    <li>
+      <a href="/logs/2025-03-03-gamedev-and-prosocial-games.html"> Gamedev and Prosocial Games </a>
+    </li>
+  </ul>
+</div>
+
 
     </main>
   </body>
