Add post on shelving projects

--- a/site/index.html
+++ b/site/index.html
@@ -39,29 +39,44 @@
   <p class="text-2xl font-bold text-primary mb-2"> Latest Logs and developments </p>
   <ul>
     <li>
+      <a href="logs/2025-04-06-shelve-things-when-they-need-it.html" class="hover:underline ml-5">
+      <p>
+2025-04-06,
+Shelve things when they need it
+      </p>
+      <em class=""> Not every project needs to be completed right away </em>
+      </a>
+    </li><li>
       <a href="logs/2025-03-03-gamedev-and-prosocial-games.html" class="hover:underline ml-5">
-2025-03-03,Gamedev and Prosocial Games
-      <em> Interesting reports found from project horseshoe, and a dabbling interest. </em>
+      <p>
+2025-03-03,
+Gamedev and Prosocial Games
+      </p>
+      <em class=""> Interesting reports found from project horseshoe, and a dabbling interest. </em>
       </a>
     </li><li>
       <a href="logs/2025-02-28-finding-a-system.html" class="hover:underline ml-5">
-2025-02-28,Finding a system
-      <em>  </em>
+      <p>
+2025-02-28,
+Finding a system
+      </p>
+      <em class="">  </em>
       </a>
     </li><li>
       <a href="logs/2025-02-07-sorting-through-poverty.html" class="hover:underline ml-5">
-2025-02-07,Sorting through poverty
-      <em> Finding something </em>
+      <p>
+2025-02-07,
+Sorting through poverty
+      </p>
+      <em class=""> Finding something </em>
       </a>
     </li><li>
       <a href="logs/2025-01-30-games-and-capitalism.html" class="hover:underline ml-5">
-2025-01-30,300 projects a month
-      <em>  </em>
-      </a>
-    </li><li>
-      <a href="logs/2025-01-25-writing-system.html" class="hover:underline ml-5">
-2025-01-25,Building a writing system and writing a book
-      <em>  </em>
+      <p>
+2025-01-30,
+300 projects a month
+      </p>
+      <em class="">  </em>
       </a>
     </li>
   </ul>
