--- a/site/topics/projects.html
+++ b/site/topics/projects.html
@@ -47,6 +47,8 @@
   <ul>
     <li>
       <a href="/logs/2025-01-30-games-and-capitalism.html"> 300 projects a month </a>
+    </li><li>
+      <a href="/logs/2025-04-06-shelve-things-when-they-need-it.html"> Shelve things when they need it </a>
     </li>
   </ul>
 </div>
