--- a/site/topics/systems.html
+++ b/site/topics/systems.html
@@ -58,6 +58,8 @@
       <a href="/logs/2025-01-25-writing-system.html"> Building a writing system and writing a book </a>
     </li><li>
       <a href="/logs/2025-02-28-finding-a-system.html"> Finding a system </a>
+    </li><li>
+      <a href="/logs/2025-04-06-shelve-things-when-they-need-it.html"> Shelve things when they need it </a>
     </li>
   </ul>
 </div>
